<package format="2">
  <name>lidar_filtering_assignment</name>
  <version>0.0.1</version>
  <description>LiDAR ground_noise filtering package</description>

  <maintainer email="moh.heshmat@gmail.com">Dr Mohamed H H Abdelwahab</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
</package>